@@ -1,5 +1,7 @@
 Version 1.0.6, 06/05/2004
 	1. parallelize StructureMBPT
+	2. use subplx in RefineRadial.
+	3. using relativistic Bethe formula for extrapolation of excitation.
 	
 Version 1.0.5, 05/30/2004
 	1. implement magnetic sublevel ionization
